styles.css
* {
	margin: 0;
	padding: 0;
	border: 0;
}

article, aside, details, figcaption, figure, footer, header, main, nav, section, summary {
  display:block;
}

/* FOR STICKY FOOTER */

.site {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

.content {
	flex-grow: 1;
}

/* END STICKY FOOTER */

#about {
	display: flex;
	flex-direction: column;
	height: 100%;
}

.grid {
	display: flex;
	flex-wrap: wrap;
	padding: 2%;
	justify-content: center;
	align-items: center;
}

nav {
background-color: #001426;
padding: 2% 0;
}

header {
  background-color: green;
}


header nav a {
text-decoration: none;
color: white;
margin: 0 20px;
text-align: center;
padding: 2% 0;
}

header nav ul li {
display: inline;
margin: 0 auto;
padding: 2% 0;
text-align: center;
text-decoration: none;
font-size: 2em;
font-family: 'Roboto Condensed', sans-serif;
}

.container h1 {
  font-size: 2em;
}

.container h2 {
  font-size: 1.5em;
}

.container {
  background-color: green;
  width:1200px;
  max-width: 100%;

}

.parallax {
  /* The image used */
  background-image: url("images/forest.png");

  /* Set a specific height */
  height: 850px;

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.cd-background-wrapper {
  background-color: #001426;
  position: relative;
  overflow: hidden;
  -webkit-perspective: 4000px;
  perspective: 4000px;
}

.cd-floating-background {
  position: relative;
  top: 0;
  left: 0;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}
.cd-floating-background.is-absolute {
  position: absolute;
}
.cd-floating-background img {
  display: block;
  width: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  /* fixes a Firefox bug - images not correctly rendered*/
  background-color: rgba(255, 255, 255, 0.01);
}
.cd-floating-background img:not(:first-child) {
  position: absolute;
  top: 0;
  left: 0;
}
.cd-floating-background img:first-child {
  -webkit-transform: translateZ(50px);
  -ms-transform: translateZ(50px);
  transform: translateZ(50px);
}
.cd-floating-background img:nth-child(2) {
  -webkit-transform: translateZ(290px);
  -ms-transform: translateZ(290px);
  transform: translateZ(290px);
}
.cd-floating-background img:nth-child(3) {
  -webkit-transform: translateZ(400px);
  -ms-transform: translateZ(400px);
  transform: translateZ(400px);
}
.no-preserve-3d .cd-floating-background {
  /* we target browsers that don't support preserve-3d and show just a standard image - no effect visible */
  position: relative;
}

#about img {
	width: 250px;
	max-width: 100%;
}

#about, #characteristics, #threats {
  width: 1200px;
  margin: 0 auto;
}

.container h1 {
  padding: 2% 1%;
}

.container h2 {
  padding: 1% 2%;
}

.container p {
  padding: 1% 2%;
}

.grid {
  padding-bottom: 2%;
}

.break {
  height: 100px;
}

@media (min-width: 600px) {
	figure {
		width: 50%;
	}


@media (min-width: 900px) {
  .grid figure {
    width: 33.33%;
  }

  @media (min-width: 1200px) {
    .grid figure {
      width: 25%;
    }
}

